--- a/PromoStudio.Web/Content/css/build.less
+++ b/PromoStudio.Web/Content/css/build.less
@@ -82,11 +82,11 @@
         a:hover,
         a:focus,
         a:active {
-            color: @completedColor;
+            color: @completedcolor;
 
             label,
             span.glyphicons:before {
-                color: @completedColor;
+                color: @completedcolor;
             }
 
             .build-step {
