--- a/PromoStudio.Web/Content/css/navigation.less
+++ b/PromoStudio.Web/Content/css/navigation.less
@@ -58,7 +58,7 @@ div.navbar {
 
             span.glyphicons.stepDone:before {
                 font-size: 16px;
-                color: @completedColor !important;
+                color: @completedcolor !important;
                 margin: 13px 0 0 -37px;
             }
 
