--- a/PromoStudio.Web/Content/css/themevariables.less
+++ b/PromoStudio.Web/Content/css/themevariables.less
@@ -25,7 +25,7 @@
 @contentcolor: @basecolor;
 @contentmutedcolor: lighten(@contentcolor, 35%);
 
-@completedColor: #57c446;
+@completedcolor: #57c446;
 
 @navcolormuted: lighten(@navcolor, 16%);
 @navinactivecolor: lighten(@navcolor, 50%);
