--- a/PromoStudio.Web/Content/css/site.css
+++ b/PromoStudio.Web/Content/css/site.css
@@ -641,6 +641,13 @@ div.vidyard_tbox {
 .thumbcontainer > a.photo-thumbnail > .photo-preview > .photo-upload.hidden {
   opacity: 0;
 }
+.thumbcontainer > a.photo-thumbnail > .photo-preview.completed > .photo-title {
+  background-color: rgba(79, 79, 79, 0.7);
+  padding: 2px;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  border-radius: 2px;
+}
 .thumbcontainer > a.photo-thumbnail:hover {
   -webkit-box-shadow: 0 1px 8px #969696;
   -moz-box-shadow: 0 1px 8px #969696;
@@ -659,4 +666,57 @@ div.vidyard_tbox {
   -webkit-background-size: contain;
   background-size: contain;
   height: 300px;
+}
+#photoUploadModal .modal-dialog {
+  width: 800px;
+}
+#photoUploadModal .modal-content {
+  background-color: #fcfcfc;
+}
+#photoUploadModal .photo-title {
+  margin-top: 112px;
+}
+#photoUploadModal .nav-tabs > li > a,
+#photoUploadModal .nav-tabs > li > a:link,
+#photoUploadModal .nav-tabs > li > a:visited {
+  color: #a8a8a8;
+}
+#photoUploadModal .nav-tabs > li > a:hover,
+#photoUploadModal .nav-tabs > li > a:focus,
+#photoUploadModal .nav-tabs > li > a:active,
+#photoUploadModal .nav-tabs > li.active > a,
+#photoUploadModal .nav-tabs > li.active > a:link,
+#photoUploadModal .nav-tabs > li.active > a:hover,
+#photoUploadModal .nav-tabs > li.active > a:focus,
+#photoUploadModal .nav-tabs > li.active > a:active,
+#photoUploadModal .nav-tabs > li.active > a:visited {
+  color: #4f4f4f;
+}
+#photoUploadModal .nav-tabs > li > a:hover {
+  border-color: #f0f0f0 #f0f0f0 #dedede #f0f0f0;
+}
+#photoUploadModal .nav-tabs > li.active > a:hover {
+  border-color: #dedede #dedede transparent #dedede;
+}
+#photoUploadModal .tab-content {
+  padding: 12px;
+  background-color: #ffffff;
+  border: solid 1px #dedede;
+  border-top: none;
+  overflow: hidden;
+  -webkit-border-top-right-radius: 0;
+  -webkit-border-bottom-right-radius: 4px;
+  -webkit-border-bottom-left-radius: 4px;
+  -webkit-border-top-left-radius: 0;
+  -moz-border-radius-topright: 0;
+  -moz-border-radius-bottomright: 4px;
+  -moz-border-radius-bottomleft: 4px;
+  -moz-border-radius-topleft: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 0;
+  -moz-background-clip: padding-box;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
 }
