css reorg, fix photo upload modal binding

--- a/PromoStudio.Web/Content/css/build.less
+++ b/PromoStudio.Web/Content/css/build.less
@@ -1,7 +1,4 @@
-﻿@import url('elements.less');
-@import url('themevariables.less');
-
-@shadowColor: darken(@bgbasecolor, 41%);
+﻿@import url('themevariables.less');
 
 .build-steps {
     margin-top: 40px;
@@ -92,7 +89,7 @@
             .build-step {
                 background-color: @bgbasecolor;
                 .rounded(@cs);
-                .box-shadow(0 1px 8px @shadowColor);
+                .box-shadow(0 1px 8px @shadowcolor);
             }
         }
 
