--- a/PromoStudio.Web/Content/css/themevariables.less
+++ b/PromoStudio.Web/Content/css/themevariables.less
@@ -14,18 +14,19 @@
 
 @bgbasecolor: #fff;
 @basecolor: #4f4f4f;
+
+@completedcolor: #57c446;
+
+
 @linkcolor: desaturate(@bannerbgcolor, 10%);
 @linkactivecolor: saturate(@bannerbgcolor, 40%);
-
-
+@shadowcolor: darken(@bgbasecolor, 41%);
 @navbgcolor: @bgbasecolor;
 @navcolor: @basecolor;
 @backcolor: darken(@bgbasecolor, 6%);
 @contentbgcolor: darken(@bgbasecolor, 3%);
 @contentcolor: @basecolor;
 @contentmutedcolor: lighten(@contentcolor, 35%);
-
-@completedcolor: #57c446;
 
 @navcolormuted: lighten(@navcolor, 16%);
 @navinactivecolor: lighten(@navcolor, 50%);
