--- a/PromoStudio.Web/Content/css/site.css
+++ b/PromoStudio.Web/Content/css/site.css
@@ -70,6 +70,146 @@ section.content {
   -moz-border-radius: 4px;
   border-radius: 4px;
 }
+/* TODO: Buttons */
+/* Accordion */
+.accordion .panel-group {
+  /* Important to have these broken out so switchClass() transition works properly */
+
+}
+.accordion .panel-group .panel.panel-default .panel-heading a,
+.accordion .panel-group .panel.panel-default .panel-heading a:link,
+.accordion .panel-group .panel.panel-default .panel-heading a:focus,
+.accordion .panel-group .panel.panel-default .panel-heading a:hover,
+.accordion .panel-group .panel.panel-default .panel-heading a:active,
+.accordion .panel-group .panel.panel-default .panel-heading a:visited {
+  text-decoration: none;
+}
+.accordion .panel-group .panel.panel-default .panel-heading a .step-title,
+.accordion .panel-group .panel.panel-default .panel-heading a:link .step-title,
+.accordion .panel-group .panel.panel-default .panel-heading a:focus .step-title,
+.accordion .panel-group .panel.panel-default .panel-heading a:hover .step-title,
+.accordion .panel-group .panel.panel-default .panel-heading a:active .step-title,
+.accordion .panel-group .panel.panel-default .panel-heading a:visited .step-title {
+  font-size: 24px;
+  line-height: 1em;
+  color: #4f4f4f;
+}
+.accordion .panel-group .panel.panel-default .panel-heading a .step-subtitle,
+.accordion .panel-group .panel.panel-default .panel-heading a:link .step-subtitle,
+.accordion .panel-group .panel.panel-default .panel-heading a:focus .step-subtitle,
+.accordion .panel-group .panel.panel-default .panel-heading a:hover .step-subtitle,
+.accordion .panel-group .panel.panel-default .panel-heading a:active .step-subtitle,
+.accordion .panel-group .panel.panel-default .panel-heading a:visited .step-subtitle {
+  font-size: 15px;
+  line-height: 1em;
+  color: #a8a8a8;
+}
+.accordion .panel-group .panel.panel-default .panel-heading a .step-completed,
+.accordion .panel-group .panel.panel-default .panel-heading a:link .step-completed,
+.accordion .panel-group .panel.panel-default .panel-heading a:focus .step-completed,
+.accordion .panel-group .panel.panel-default .panel-heading a:hover .step-completed,
+.accordion .panel-group .panel.panel-default .panel-heading a:active .step-completed,
+.accordion .panel-group .panel.panel-default .panel-heading a:visited .step-completed {
+  width: 100%;
+  text-align: right;
+  height: 20px;
+  margin: -20px 31px 0 20px;
+}
+.accordion .panel-group .panel.panel-default .panel-heading a .step-completed .step-done:before,
+.accordion .panel-group .panel.panel-default .panel-heading a:link .step-completed .step-done:before,
+.accordion .panel-group .panel.panel-default .panel-heading a:focus .step-completed .step-done:before,
+.accordion .panel-group .panel.panel-default .panel-heading a:hover .step-completed .step-done:before,
+.accordion .panel-group .panel.panel-default .panel-heading a:active .step-completed .step-done:before,
+.accordion .panel-group .panel.panel-default .panel-heading a:visited .step-completed .step-done:before {
+  color: #57c446;
+  margin-left: -26px;
+}
+.accordion .panel-group .step-title.opened {
+  padding: 50px 0 0 30px;
+}
+.accordion .panel-group .step-title.collapsed {
+  padding: 30px 0 10px 30px;
+}
+.accordion .panel-group .step-subtitle.opened {
+  padding: 12px 0 50px 35px;
+  opacity: 1;
+  margin: 0 0 0 0;
+}
+.accordion .panel-group .step-subtitle.collapsed {
+  padding: 0 0 0 35px;
+  opacity: 0;
+  margin: -28px 0 28px 0;
+}
+.accordion .panel-group .step-done.opened {
+  margin-top: -164px;
+}
+.accordion .panel-group .step-done.collapsed {
+  margin-top: -82px;
+}
+/* Modal with tabs */
+.modal-content {
+  background-color: #fcfcfc;
+}
+.modal-content .nav-tabs > li > a,
+.modal-content .nav-tabs > li > a:link,
+.modal-content .nav-tabs > li > a:visited {
+  color: #a8a8a8;
+}
+.modal-content .nav-tabs > li > a:hover,
+.modal-content .nav-tabs > li > a:focus,
+.modal-content .nav-tabs > li > a:active,
+.modal-content .nav-tabs > li.active > a,
+.modal-content .nav-tabs > li.active > a:link,
+.modal-content .nav-tabs > li.active > a:hover,
+.modal-content .nav-tabs > li.active > a:focus,
+.modal-content .nav-tabs > li.active > a:active,
+.modal-content .nav-tabs > li.active > a:visited {
+  color: #4f4f4f;
+}
+.modal-content .nav-tabs > li > a:hover {
+  border-color: #f0f0f0 #f0f0f0 #dedede #f0f0f0;
+}
+.modal-content .nav-tabs > li.active > a:hover {
+  border-color: #dedede #dedede transparent #dedede;
+}
+.modal-content .tab-content {
+  padding: 12px;
+  background-color: #ffffff;
+  border: solid 1px #dedede;
+  border-top: none;
+  overflow: hidden;
+  -webkit-border-top-right-radius: 0;
+  -webkit-border-bottom-right-radius: 4px;
+  -webkit-border-bottom-left-radius: 4px;
+  -webkit-border-top-left-radius: 0;
+  -moz-border-radius-topright: 0;
+  -moz-border-radius-bottomright: 4px;
+  -moz-border-radius-bottomleft: 4px;
+  -moz-border-radius-topleft: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 0;
+  -moz-background-clip: padding-box;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+}
+/* Accordion */
+.panel-group {
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 1px 4px #e6e6e6;
+  -moz-box-shadow: 0 1px 4px #e6e6e6;
+  box-shadow: 0 1px 4px #e6e6e6;
+}
+.panel-group .panel.panel-default .panel-heading {
+  padding: 0;
+  background-color: #ffffff;
+}
+.panel-group .panel.panel-default .panel-collapse {
+  background-color: #fcfcfc;
+}
 div.navbar {
   position: absolute;
   top: 75px;
@@ -493,94 +633,6 @@ div.vidyard_tmask {
 div.vidyard_tbox {
   z-index: 2100 !important;
 }
-/* TODO: Move to build-branding.less */
-.brandingWizard .panel-group {
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  -webkit-box-shadow: 0 1px 4px #e6e6e6;
-  -moz-box-shadow: 0 1px 4px #e6e6e6;
-  box-shadow: 0 1px 4px #e6e6e6;
-  /* Important to have these broken out so switchClass() transition works properly */
-
-}
-.brandingWizard .panel-group .panel.panel-default .panel-heading {
-  padding: 0;
-  background-color: #ffffff;
-}
-.brandingWizard .panel-group .panel.panel-default .panel-heading a,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:link,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:focus,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:hover,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:active,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:visited {
-  text-decoration: none;
-}
-.brandingWizard .panel-group .panel.panel-default .panel-heading a .step-title,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:link .step-title,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:focus .step-title,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:hover .step-title,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:active .step-title,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:visited .step-title {
-  font-size: 24px;
-  line-height: 1em;
-  color: #4f4f4f;
-}
-.brandingWizard .panel-group .panel.panel-default .panel-heading a .step-subtitle,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:link .step-subtitle,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:focus .step-subtitle,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:hover .step-subtitle,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:active .step-subtitle,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:visited .step-subtitle {
-  font-size: 15px;
-  line-height: 1em;
-  color: #a8a8a8;
-}
-.brandingWizard .panel-group .panel.panel-default .panel-heading a .step-completed,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:link .step-completed,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:focus .step-completed,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:hover .step-completed,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:active .step-completed,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:visited .step-completed {
-  width: 100%;
-  text-align: right;
-  height: 20px;
-  margin: -20px 31px 0 20px;
-}
-.brandingWizard .panel-group .panel.panel-default .panel-heading a .step-completed .step-done:before,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:link .step-completed .step-done:before,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:focus .step-completed .step-done:before,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:hover .step-completed .step-done:before,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:active .step-completed .step-done:before,
-.brandingWizard .panel-group .panel.panel-default .panel-heading a:visited .step-completed .step-done:before {
-  color: #57c446;
-  margin-left: -26px;
-}
-.brandingWizard .panel-group .panel.panel-default .panel-collapse {
-  background-color: #fcfcfc;
-}
-.brandingWizard .panel-group .step-title.opened {
-  padding: 50px 0 0 30px;
-}
-.brandingWizard .panel-group .step-title.collapsed {
-  padding: 30px 0 10px 30px;
-}
-.brandingWizard .panel-group .step-subtitle.opened {
-  padding: 12px 0 50px 35px;
-  opacity: 1;
-  margin: 0 0 0 0;
-}
-.brandingWizard .panel-group .step-subtitle.collapsed {
-  padding: 0 0 0 35px;
-  opacity: 0;
-  margin: -28px 0 28px 0;
-}
-.brandingWizard .panel-group .step-done.opened {
-  margin-top: -164px;
-}
-.brandingWizard .panel-group .step-done.collapsed {
-  margin-top: -82px;
-}
 .thumbcontainer > a.photo-thumbnail,
 .thumbcontainer > a.photo-thumbnail:link,
 .thumbcontainer > a.photo-thumbnail:hover,
@@ -641,7 +693,8 @@ div.vidyard_tbox {
 .thumbcontainer > a.photo-thumbnail > .photo-preview > .photo-upload.hidden {
   opacity: 0;
 }
-.thumbcontainer > a.photo-thumbnail > .photo-preview.completed > .photo-title {
+.thumbcontainer > a.photo-thumbnail > .photo-preview.completed > .photo-title,
+.thumbcontainer > a.photo-thumbnail > .photo-preview.no-upload > .photo-title {
   background-color: rgba(79, 79, 79, 0.7);
   padding: 2px;
   -webkit-border-radius: 2px;
@@ -659,6 +712,7 @@ div.vidyard_tbox {
   -moz-box-shadow: 0 1px 8px #57c446;
   box-shadow: 0 1px 8px #57c446;
 }
+/* TODO: Move to build-branding.less */
 .photo-selected {
   background-color: #4a4a4a;
   -moz-background-size: contain;
@@ -670,53 +724,6 @@ div.vidyard_tbox {
 #photoUploadModal .modal-dialog {
   width: 800px;
 }
-#photoUploadModal .modal-content {
-  background-color: #fcfcfc;
-}
 #photoUploadModal .photo-title {
   margin-top: 112px;
-}
-#photoUploadModal .nav-tabs > li > a,
-#photoUploadModal .nav-tabs > li > a:link,
-#photoUploadModal .nav-tabs > li > a:visited {
-  color: #a8a8a8;
-}
-#photoUploadModal .nav-tabs > li > a:hover,
-#photoUploadModal .nav-tabs > li > a:focus,
-#photoUploadModal .nav-tabs > li > a:active,
-#photoUploadModal .nav-tabs > li.active > a,
-#photoUploadModal .nav-tabs > li.active > a:link,
-#photoUploadModal .nav-tabs > li.active > a:hover,
-#photoUploadModal .nav-tabs > li.active > a:focus,
-#photoUploadModal .nav-tabs > li.active > a:active,
-#photoUploadModal .nav-tabs > li.active > a:visited {
-  color: #4f4f4f;
-}
-#photoUploadModal .nav-tabs > li > a:hover {
-  border-color: #f0f0f0 #f0f0f0 #dedede #f0f0f0;
-}
-#photoUploadModal .nav-tabs > li.active > a:hover {
-  border-color: #dedede #dedede transparent #dedede;
-}
-#photoUploadModal .tab-content {
-  padding: 12px;
-  background-color: #ffffff;
-  border: solid 1px #dedede;
-  border-top: none;
-  overflow: hidden;
-  -webkit-border-top-right-radius: 0;
-  -webkit-border-bottom-right-radius: 4px;
-  -webkit-border-bottom-left-radius: 4px;
-  -webkit-border-top-left-radius: 0;
-  -moz-border-radius-topright: 0;
-  -moz-border-radius-bottomright: 4px;
-  -moz-border-radius-bottomleft: 4px;
-  -moz-border-radius-topleft: 0;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 4px;
-  border-bottom-left-radius: 4px;
-  border-top-left-radius: 0;
-  -moz-background-clip: padding-box;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
 }
