--- a/PromoStudio.Web/Content/css/site.less
+++ b/PromoStudio.Web/Content/css/site.less
@@ -87,12 +87,8 @@ section.content {
     height: 300px;
 }
 
-#photoUploadModal {
+#photoChooserModal {
     .modal-dialog {
         width: 800px;
-    }
-
-    .photo-title {
-        margin-top: 112px;
     }
 }
