--- a/PromoStudio.Web/Content/css/ps-elements.css
+++ b/PromoStudio.Web/Content/css/ps-elements.css
@@ -39,6 +39,20 @@
   -webkit-background-size: contain;
   background-size: contain;
 }
+.thumbcontainer > a.photo-thumbnail > .photo-preview > .photo-select {
+  display: none;
+}
+.thumbcontainer > a.photo-thumbnail > .photo-preview > .photo-select > span.glyphicons,
+.thumbcontainer > a.photo-thumbnail > .photo-preview > .photo-select > span.glyphicons:before {
+  font-size: 24px;
+  color: #57c446;
+}
+.thumbcontainer > a.photo-thumbnail > .photo-preview > .photo-select > span.glyphicons {
+  float: left;
+}
+.thumbcontainer > a.photo-thumbnail > .photo-preview > .photo-select > span.glyphicons:before {
+  margin: 8px 0 0 12px;
+}
 .thumbcontainer > a.photo-thumbnail > .photo-preview > .photo-upload {
   text-align: center;
 }
@@ -60,30 +74,73 @@
 }
 .thumbcontainer > a.photo-thumbnail > .photo-preview > .photo-title {
   display: inline-block;
-  margin-top: 6px;
+  margin-top: 8px;
   text-transform: uppercase;
   color: #a8a8a8;
   font-size: 9px;
 }
-.thumbcontainer > a.photo-thumbnail > .photo-preview > .photo-upload.hidden {
+.thumbcontainer > a.photo-thumbnail > .photo-preview > .photo-change {
+  display: none;
+  width: 120px;
+  height: 92px;
+  margin-top: 12px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
   opacity: 0;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+.thumbcontainer > a.photo-thumbnail > .photo-preview > .photo-change > span.photo-change-label {
+  display: block;
+  color: #4f4f4f;
+  font-size: 12px;
+  font-weight: bold;
+  margin-top: 54px;
+}
+.thumbcontainer > a.photo-thumbnail > .photo-preview > .photo-change > span.glyphicons,
+.thumbcontainer > a.photo-thumbnail > .photo-preview > .photo-change > span.glyphicons:before {
+  font-size: 36px;
+  width: 35px;
+  color: #4f4f4f;
+}
+.thumbcontainer > a.photo-thumbnail > .photo-preview > .photo-change > span.glyphicons:before {
+  margin: -2px 0 0 6px;
+}
+.thumbcontainer > a.photo-thumbnail > .photo-preview.completed > .photo-upload {
+  display: none;
+}
+.thumbcontainer > a.photo-thumbnail > .photo-preview.completed > .photo-change {
+  display: inline-block;
 }
 .thumbcontainer > a.photo-thumbnail > .photo-preview.completed > .photo-title,
-.thumbcontainer > a.photo-thumbnail > .photo-preview.no-upload > .photo-title {
+.thumbcontainer > a.photo-thumbnail > .photo-preview.no-choose > .photo-title {
   background-color: rgba(79, 79, 79, 0.7);
   padding: 2px;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
   border-radius: 2px;
 }
+.thumbcontainer > a.photo-thumbnail > .photo-preview.completed > .photo-title {
+  margin-top: 0px;
+}
+.thumbcontainer > a.photo-thumbnail > .photo-preview.no-choose > .photo-title {
+  margin-top: 112px;
+}
 .thumbcontainer > a.photo-thumbnail:hover {
   -webkit-box-shadow: 0 1px 8px #969696;
   -moz-box-shadow: 0 1px 8px #969696;
   box-shadow: 0 1px 8px #969696;
+}
+.thumbcontainer > a.photo-thumbnail:hover > .photo-preview > .photo-change {
+  opacity: 1;
 }
 .thumbcontainer > a.photo-thumbnail.selected,
 .thumbcontainer > a.photo-thumbnail.selected:hover {
   -webkit-box-shadow: 0 1px 8px #57c446;
   -moz-box-shadow: 0 1px 8px #57c446;
   box-shadow: 0 1px 8px #57c446;
+}
+.thumbcontainer > a.photo-thumbnail.selected .photo-select,
+.thumbcontainer > a.photo-thumbnail.selected:hover .photo-select {
+  display: block;
 }
