--- a/PromoStudio.Web/Content/css/build-footage.less
+++ b/PromoStudio.Web/Content/css/build-footage.less
@@ -32,6 +32,8 @@
 
         > .footage-preview {
             background-color: @mediabgcolor;
+            background-position: center;
+            background-repeat: no-repeat;
             .bgSize(contain);
             height: 140px;
 
