--- a/PromoStudio.Web/Content/css/site.less
+++ b/PromoStudio.Web/Content/css/site.less
@@ -45,7 +45,8 @@ div.color-band {
 
             a#logout {
                 float: right;
-                margin-left: 20px;
+                margin: 9px 0 0 20px;
+                font-weight: bold;
             }
 
     h1 {
@@ -83,6 +84,8 @@ section.content {
 /* TODO: Move to build-branding.less */
 .photo-selected {
     background-color: @mediabgcolor;
+    background-position: center;
+    background-repeat: no-repeat;
     .bgSize(contain);
     height: 300px;
 }
