--- a/PromoStudio.Web/Content/css/bootstrap-overrides.less
+++ b/PromoStudio.Web/Content/css/bootstrap-overrides.less
@@ -130,6 +130,7 @@
     .box-shadow(0 1px 4px @panelshadow);
 
     .panel.panel-default {
+        margin:0;
         .panel-heading {
             padding: 0;
             background-color: @panelheader;
