--- a/PromoStudio.Web/Content/css/ps-elements.less
+++ b/PromoStudio.Web/Content/css/ps-elements.less
@@ -22,6 +22,8 @@
 
         > .photo-preview {
             background-color: @bgbasecolor;
+            background-position: center;
+            background-repeat: no-repeat;
             width: 228px;
             height: 130px;
             text-align: center;
