--- a/PromoStudio.Web/Content/css/build-footage.css
+++ b/PromoStudio.Web/Content/css/build-footage.css
@@ -34,10 +34,10 @@
   background-color: #4a4a4a;
   background-position: center;
   background-repeat: no-repeat;
-  -moz-background-size: contain;
-  -o-background-size: contain;
-  -webkit-background-size: contain;
-  background-size: contain;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  -webkit-background-size: cover;
+  background-size: cover;
   height: 140px;
 }
 .thumbcontainer > a.footage-thumbnail > .footage-preview > .footage-play {
@@ -82,7 +82,6 @@
 .thumbcontainer > a.footage-thumbnail > .footage-selection > .glyphicons.unchecked {
   display: inline-block;
   *display: inline;
-  color: #9c9c9c;
 }
 .thumbcontainer > a.footage-thumbnail > .footage-selection > .glyphicons.unchecked:before {
   display: inline-block;
