--- a/PromoStudio.Web/Content/css/site.less
+++ b/PromoStudio.Web/Content/css/site.less
@@ -81,17 +81,4 @@ section.content {
 
 
 
-/* TODO: Move to build-branding.less */
-.photo-selected {
-    background-color: @mediabgcolor;
-    background-position: center;
-    background-repeat: no-repeat;
-    .bgSize(contain);
-    height: 300px;
-}
-
-#photoChooserModal {
-    .modal-dialog {
-        width: 800px;
-    }
-}
+/* TODO: Move to build-audio.less */
