--- a/PromoStudio.Web/Views/Videos/Index.cshtml
+++ b/PromoStudio.Web/Views/Videos/Index.cshtml
@@ -25,6 +25,15 @@
     <div class="loader-large"></div>
 </div>
 
+<div class="panel panel-info">
+    <div class="panel-heading">
+        <h3 class="panel-title">PromoStudio Demo Notice</h3>
+    </div>
+    <div class="panel-body">
+        This page is currently unstyled. It will be a grid of video thumbnails and will launch the Vidyard lightbox.
+    </div>
+</div>
+
 <!-- ko if: CustomerVideos().length > 0 -->
 <div data-bind="foreach: CustomerVideos()">
     <div class="row-fluid">
